--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,3 +16,9 @@
     background-color: #888;
     border-radius: 4px;
 }
+
+ion-icon{
+    cursor: pointer;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
